# GenAI_AgenticAI_GL

./: .gitignore  README.md  main.py  pyproject.toml
RAG_Pipeline/: CRUDops using Azure OpenAI.ipynb  Impoving Generation in RAG Systems.ipynb  Improving Retrieval in RAG Systems.ipynb  RAG Evaluation.ipynb  RAG on TESLA Reports using Azure OpenAI.ipynb  rag-chat.py
