[project]
name = "genai-agenticai-gl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.20",
    "gradio>=5.44.1",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.32",
    "openai>=1.104.2",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.11.0",
]

[tool.uv.workspace]
members = [
    "venv",
]
